# ws-notify

./: .gitignore  CHANGELOG.md  WS-Notify.cabal  readme.md
app/: HTTPServer.hs  Main.hs  WSServer.hs
src/: MyLib.hs  SharedHandle.hs
static/: main.html
